Grease Pencil: python generated strokes flicker and crash #75144

Closed
opened 2020-03-27 20:49:38 +01:00 by Cody Winchester · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-27 00:47, hash: e1ee4dff8d
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]
When generating grease pencil strokes with python the results in the 2.83 master build refactor are unstable. They visually glitch and often lead to crashes.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Test GP Generate.blend
The attached blend file has 2 scripts. 1 that generates random strokes and 1 that copies the existing stable grease pencil object and all of it's strokes/settings. These scripts worked fine before the refactor.

Both result in a grease pencil object that when animated, sculpted, or edited have crazy spiky flickering. The thickness flickers all over the place and the triangles flash in and out.

Eventually if enough sculpting is done it will end up crashing.

The only way to fix it I have found is to join it with another GP object that was created and manually drawn. Then you have to delete the drawn stroke and re-add any modifiers that you setup.

2020-03-27 14-46-10.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-27 00:47, hash: `e1ee4dff8d` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] When generating grease pencil strokes with python the results in the 2.83 master build refactor are unstable. They visually glitch and often lead to crashes. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] [Test GP Generate.blend](https://archive.blender.org/developer/F8430818/Test_GP_Generate.blend) The attached blend file has 2 scripts. 1 that generates random strokes and 1 that copies the existing stable grease pencil object and all of it's strokes/settings. These scripts worked fine before the refactor. Both result in a grease pencil object that when animated, sculpted, or edited have crazy spiky flickering. The thickness flickers all over the place and the triangles flash in and out. Eventually if enough sculpting is done it will end up crashing. The only way to fix it I have found is to join it with another GP object that was created and manually drawn. Then you have to delete the drawn stroke and re-add any modifiers that you setup. [2020-03-27 14-46-10.mp4](https://archive.blender.org/developer/F8430825/2020-03-27_14-46-10.mp4)

Added subscriber: @CodyWinchester

Added subscriber: @CodyWinchester

#74671 was marked as duplicate of this issue

#74671 was marked as duplicate of this issue

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2020-03-27 21:28:22 +01:00

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

The glitches in the fill is a bug that we are working #74663

I will take a look at the crash.

The glitches in the fill is a bug that we are working #74663 I will take a look at the crash.
Antonio Vazquez was unassigned by Cody Winchester 2020-03-28 05:25:39 +01:00
Cody Winchester self-assigned this 2020-03-28 05:25:39 +01:00

In #75144#899077, @antoniov wrote:
The glitches in the fill is a bug that we are working #74663

I will take a look at the crash.

One thing to note is that bug you linked is on grease pencil strokes with a fill material. The materials I have on mine have fill turned off and they still show up when the flicker happens.

> In #75144#899077, @antoniov wrote: > The glitches in the fill is a bug that we are working #74663 > > I will take a look at the crash. One thing to note is that bug you linked is on grease pencil strokes with a fill material. The materials I have on mine have fill turned off and they still show up when the flicker happens.

Yes, the flickering is general, but more visible with fill.

Yes, the flickering is general, but more visible with fill.

Added subscribers: @sse, @schuelermine

Added subscribers: @sse, @schuelermine

This issue was referenced by 2c9e27f209

This issue was referenced by 2c9e27f209a94867fa3d156564f5e8e6ade2278e

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75144
No description provided.