Fix T75144 Grease Pencil: Python generated strokes flicker and crash

This was caused by a flag not being reset in time, causing discard of
batches already queued to be drawn.